--- a/site/styles.css
+++ b/site/styles.css
@@ -9,7 +9,7 @@
 }
 
 body {
-  background-image: url("assets/backgrounds/hbox\ stare.png");
+  background-image: url("assets/backgrounds/bts-zain-mango.jpg");
   background-repeat: no-repeat;
   background-color: black;
   background-size: cover;
@@ -219,7 +219,6 @@ footer {
 }
 
 .footer a {
-  text-decoration: none;
   color: black;
   font-weight: 500;
 }
@@ -230,8 +229,9 @@ a {
   color: transparent; */
   color: var(--link-color);
   font-weight: 500;
+  text-decoration: none;
 }
 
-.footer a:hover {
+.footer a:hover, .card-location:hover {
   text-decoration: underline;
 }
