fix: add backgrounds from meleemajors.com

--- a/site/styles.css
+++ b/site/styles.css
@@ -9,7 +9,7 @@
 }
 
 body {
-  background-image: url("assets/backgrounds/bts-zain-mango.jpg");
+  background-image: url("assets/backgrounds/2.jpg");
   background-repeat: no-repeat;
   background-color: black;
   background-size: cover;
