--- a/site/styles.css
+++ b/site/styles.css
@@ -97,7 +97,7 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   position: fixed;
-  top: 0;
+  bottom: 0;
   left: 0;
   right: 0;
   height: 100lvh;
