--- a/site/styles.css
+++ b/site/styles.css
@@ -167,13 +167,6 @@ body {
   align-items: center;
 }
 
-/* change mobile background to make it less blurry and load faster */
-@media screen and (max-width: 1000px) {
-  .fixed-position {
-    background-image: url("assets/backgrounds/mobile.webp");
-  }
-}
-
 ::selection {
   background-color: var(--middle-gradient);
   color: #ffffff;
@@ -396,9 +389,12 @@ footer {
   background-image: linear-gradient(to right, var(--left-gradient), var(--right-gradient));
   width: max-content;
   height: max-content;
+  max-width: 100vw;
   border-radius: 25px 25px 0px 0px;
   padding: 20px 60px;
   margin: none;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .footer ::selection {
@@ -457,7 +453,7 @@ footer {
   align-items: center;
   justify-content: center;
   margin-bottom: 20px;
-  max-height: 150px;
+  max-height: 250px;
   transition: max-height 0.4s ease-in-out, margin-bottom 0.4s ease-in-out, opacity 0.7s ease-in-out;
   overflow: hidden;
   opacity: 1;
@@ -487,6 +483,7 @@ footer {
 }
 
 .calendar-url-snippet pre {
+  overflow-x: auto;
   font-family: "Fira Mono", monospace;
   margin: 0;
   align-items: left;
@@ -519,4 +516,29 @@ footer {
 
 .footer a:hover {
   text-decoration: underline;
+}
+
+/* change mobile background to make it less blurry and load faster */
+@media screen and (max-width: 1000px) {
+  .fixed-position {
+    background-image: url("assets/backgrounds/mobile.webp");
+  }
+  .title, .subtitle {
+    color: var(--card-background);
+  }
+  .subtitle {
+    font-weight: 550;
+  }
+  .calendar-url-snippet pre {
+    font-size: 12px;
+  }
+  .footer {
+    padding: 10px 20px;
+  }
+  .footer p {
+    font-size: 15px;
+  }
+  .footer button {
+    font-size: 15px;
+  }
 }
