--- a/site/styles.css
+++ b/site/styles.css
@@ -207,12 +207,13 @@ hr {
 }
 
 .card-container {
-  min-height: calc(100vh - 225px);
+  min-height: calc(100vh - 314px);
   min-width: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  padding: 40px 0;
 }
 
 .dark-mode .card {
@@ -452,17 +453,19 @@ footer {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   max-height: 250px;
-  transition: max-height 0.4s ease-in-out, margin-bottom 0.4s ease-in-out, opacity 0.7s ease-in-out;
+  transition: max-height 0.4s ease-in-out, margin-bottom 0.4s ease-in-out, opacity 0.45s ease-in-out, scale 0.4s ease-in-out;
   overflow: hidden;
   opacity: 1;
+  scale: 100%;
 }
 
 .calendar-note-hidden {
   max-height: 0;
   margin-bottom: 0;
   opacity: 0;
+  scale: 95%;
 }
 
 .calendar-url-snippet {
@@ -518,7 +521,7 @@ footer {
   text-decoration: underline;
 }
 
-/* change mobile background to make it less blurry and load faster */
+/* tweaks to make mobile experience better */
 @media screen and (max-width: 1000px) {
   .fixed-position {
     background-image: url("assets/backgrounds/mobile.webp");
@@ -533,7 +536,7 @@ footer {
     font-size: 12px;
   }
   .footer {
-    padding: 10px 20px;
+    padding: 15px 20px;
   }
   .footer p {
     font-size: 15px;
