feat: add signup form and style email content

--- a/site/styles.css
+++ b/site/styles.css
@@ -614,3 +614,10 @@ input:focus {
     font-size: 15px;
   }
 }
+
+/* Styling for Kit email signup form */
+.formkit-fields {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
